fix(social-media-carousel): prevents prev & next buttons from showing on smaller screens

--- a/src/components/social-media-carousel/social-media-carousel.less
+++ b/src/components/social-media-carousel/social-media-carousel.less
@@ -57,9 +57,10 @@ http://flickity.metafizzy.co
 }
 
 .flickity-prev-next-button {
-	.mobile-hidden;
+	display: none;
 	
 	@media @l {
+		display: block;
 		position: absolute;
 		top: 50%;
 		transform: translateY(-50%);
